[gd_scene load_steps=5 format=3 uid="uid://dvpothvy2qsdc"]

[ext_resource type="Script" path="res://src/scenes/ui/inventory/floating_slot.gd" id="1_fwioo"]
[ext_resource type="Script" path="res://src/resources/inventory/inventory_slot.gd" id="2_nvypb"]
[ext_resource type="PackedScene" uid="uid://bixwcj5yj87vd" path="res://src/scenes/ui/counted_item_ui.tscn" id="3_aghe8"]

[sub_resource type="Resource" id="Resource_k7eaq"]
script = ExtResource("2_nvypb")
amount = 0

[node name="FloatingSlot" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_fwioo")
inventory_slot = SubResource("Resource_k7eaq")

[node name="SlotDisplay" parent="." instance=ExtResource("3_aghe8")]
layout_mode = 2

[connection signal="visibility_changed" from="SlotDisplay" to="." method="_on_slot_display_visibility_changed"]
